[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vaultclaw"
version = "0.1.0"
description = "A secure, open-source secrets vault CLI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

[project.scripts]
vaultclaw = "vaultclaw.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
